Improved phone compatibility and fixed horizontal scrolling

--- a/CSS/Index/sponsorhip.css
+++ b/CSS/Index/sponsorhip.css
@@ -95,7 +95,7 @@
         display: contents;
     }
     .InnerVideo {
-        height: 30%;
+        height: 350px;
         margin-top: 20px;
     }
 }
